[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/card/cardboard_small.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/fruit/fruit0_frame0.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/raw/My_Unprofessional_Handwriting.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/raw/Mat Saleh.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/events/EventCard.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 46
use_filter = true
extra_spacing_top = -3
extra_spacing_bottom = -9
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 105.11, 127.802 )

[node name="EventCard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -27.6153, -40.9988 )
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.52264, -24.386 )
texture = ExtResource( 1 )
centered = false

[node name="EventStats" type="VBoxContainer" parent="."]
margin_right = 201.0
margin_bottom = 257.0
mouse_filter = 2
custom_constants/separation = -12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRow" type="HBoxContainer" parent="EventStats"]
margin_right = 217.0
margin_bottom = 28.0
custom_constants/separation = -2

[node name="LabelName" type="Label" parent="EventStats/TopRow"]
margin_right = 150.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Combat"

[node name="EventTexture" type="TextureRect" parent="EventStats"]
margin_top = 16.0
margin_right = 217.0
margin_bottom = 170.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Description" type="RichTextLabel" parent="EventStats"]
margin_top = 158.0
margin_right = 217.0
margin_bottom = 258.0
rect_min_size = Vector2( 217, 100 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "you will now die uwu"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 104.669, 128.106 )
shape = SubResource( 3 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
